# atp-shooter

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  STRUCTURE.md
maps/: testmap.h
release/: run-checkpoint-1.sh  test.cfg
release/checkpoint-1/: atp-shooter  run.sh
src/: Enemy.cpp  Enemy.h  EnemySpawner.cpp  EnemySpawner.h  Entity.cpp  Entity.h  EntitySpawner.cpp  EntitySpawner.h  Fireball.cpp  Fireball.h  FireballSpawner.cpp  FireballSpawner.h  Graphics.cpp  Graphics.h  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsFacade.cpp  GraphicsFacade.h  GraphicsProxy.cpp  GraphicsProxy.h  InputCommand.cpp  InputCommand.h  InputCommandDecorator.cpp  InputCommandDecorator.h  LoadDecorator.cpp  LoadDecorator.h  Player.cpp  Player.h  SaveDecorator.cpp  SaveDecorator.h  Scene.cpp  Scene.h  SceneSnapshotHolder.cpp  SceneSnapshotHolder.h  Texture.h  Vector2D.cpp  Vector2D.h  WalkCommand.cpp  WalkCommand.h  constants.h  (+2 more)
